# SDL2Lab

./: AndroidManifest.xml  CMakeLists.txt  README.md  main.c  strings.xml
.github/workflows/: build-android.yml  build-ios.yml
